# TP-Generator

./: .gitignore  README.md  SECURITY.md  pyproject.toml  requirements.txt  setup.py
TP_Generator/: AttackTypes.py  Bruteforcer_List.py  MFA_Generator.py  Nonce_Generator.py  QR_Generator.py  Utils.py
