[build-system]
requires = ["setuptools<70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tp-generator"
version = "2025.9.10"
description = ""
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "MIT" }
keywords = ["TPCyberSec", "TP-Generator"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: Implementation :: Jython"
]

authors = [
  { name = "TP Cyber Security", email = "tpcybersec2023@gmail.com" }
]

dependencies = [
  "json-duplicate-keys>=2025.9.9"
]

[project.urls]
Homepage = "https://github.com/TPCyberSec/TP-Generator"

[tool.setuptools]
packages = ["tp_generator"]